--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/05-heading.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/05-heading.twig
@@ -1,10 +1,9 @@
 <h1>We <span>untether</span> your most important asset, data.</h1>
 <h2>We <span>untether</span> your most important asset, data.</h2>
-<h3>We untether your most important asset, data.</h3>
-<h4>We untether your most important asset, data.</h4>
-<h5>We untether your most important asset, data.</h5>
-<h6>We untether your most important asset, data.</h6>
-<h5>FFW Data Platform</h5>
+<h3>We <span>untether</span> your most important asset, data.</h3>
+<h4>We <span>untether</span> your most important asset, data.</h4>
+<h5>We <span>untether</span> your most important asset, data.</h5>
+<h6>We <span>untether</span> your most important asset, data.</h6>
 <br>
 <br>
 <h5>What We Do</h5>
