--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/btn.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/btn.twig
@@ -1,19 +1,19 @@
 <br>
 <div>
-<a class="btn" href=""> Apply </a>
+<a class="btn font-semibold" href=""> Apply </a>
 </div>
 <br>
 <br>
 <div>
-<a class="btn btn--radius btn--small" href=""> Get a Demo </a>
+<a class="btn btn--radius btn--small font-semibold" href=""> Get a Demo </a>
 </div>
 <br>
 <br>
 <div>
-<a class="btn btn--large font--large" href=""> Contact Us </a>
+<a class="btn btn--large font--large font-semibold" href=""> Contact Us </a>
 </div>
 <br>
 <br>
-<div class="bg--dark-gray" style="padding: 20px;">
+<div class="bg--dark-gray font-semibold" style="padding: 20px;">
 <a class="btn btn--large btn--transparent font--nor" href=""> Talk to an Expert </a>
 </div>
