--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/form.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/form.twig
@@ -1,9 +1,32 @@
 <div class="form-item" style="padding: 0 50px">
-    <p class="text-bold">Input</p>
-    <input type="text" class="form-text">
+  <p class="text-bold">Input</p>
+  <input type="text" class="form-text">
 </div>
 
 <div class="form-item" style="padding: 0 50px">
-    <p class="text-bold">Textarea</p>
-    <textarea class="form-textarea"></textarea>
+  <p class="text-bold">Textarea</p>
+  <textarea class="form-textarea"></textarea>
+</div>
+
+<div class="form-item" style="padding: 0 50px">
+  <p class="text-bold">Select</p>
+  <select name="cars" id="cars">
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="mercedes">Mercedes</option>
+      <option value="audi">Audi</option>
+  </select>
+</div>
+
+<div class="form-item" style="padding: 0 50px">
+  <p class="text-bold">Label</p>
+  <form>
+    <input type="radio" id="html" name="fav_language" value="HTML">
+    <label for="html">HTML</label><br>
+    <input type="radio" id="css" name="fav_language" value="CSS">
+    <label for="css">CSS</label><br>
+    <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+    <label for="javascript">JavaScript</label><br><br>
+    <input type="submit" value="Submit">
+  </form>
 </div>
