update base and footer

--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/12-list.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/12-list.twig
@@ -1,12 +1,10 @@
 <div class="list-wrap" style="padding: 50px">
-  <p class="text--bold">Ul list</p>
-  <ul>
+  <ul style="margin-bottom: 30px">
     <li>The top predictors of DevOps success</li>
     <li>The surprising data risks faced by DevOps adopters</li>
     <li>Emerging tools for quickly creating production-like dev/test environments</li>
   </ul>
-  <p class="text--bold">Ol list</p>
-  <ol>
+  <ol style="padding-left: 14px;">
     <li>The top predictors of DevOps success</li>
     <li>The surprising data risks faced by DevOps adopters</li>
     <li>Emerging tools for quickly creating production-like dev/test environments</li>
