--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/99-sitewide/footer/footer.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/99-sitewide/footer/footer.twig
@@ -1,1 +1,32 @@
-<footer>Footer</footer>
+<footer class="footer link--gray">
+  <div class="container container--large">
+    <div class="footer-top">
+      <div class="footer-top__item">
+        {{ footerTop.colOne }}
+      </div>
+      <div class="footer-top__item hidden--mobile hidden--tablet">
+        {{ footerTop.colTwo }}
+      </div>
+      <div class="footer-top__item hidden--mobile hidden--tablet">
+        {{ footerTop.colThree }}
+      </div>
+      <div class="footer-top__item hidden--mobile hidden--tablet">
+        {{ footerTop.colFour }}
+      </div>
+      <div class="footer-top__item hidden--mobile hidden--tablet">
+        {{ footerTop.colFive }}
+      </div>
+      <div class="footer-top__item hidden--mobile hidden--tablet">
+        {{ footerTop.colSix }}
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="footer-bottom__legal">
+        {{ footerBottom.left }}
+      </div>
+      <div class="footer-bottom__copyright">
+        {{ footerBottom.right }}
+      </div>
+    </div>
+  </div>
+</footer>
