--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/99-sitewide/header/header.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/99-sitewide/header/header.twig
@@ -1,1 +1,41 @@
-<header>header</header>
+<header class="header">
+  <div class="header__top">
+    <div class="container">
+      <nav>
+        <ul class="menu-top">
+          <li><a href="#">English</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Login</a></li>
+        </ul>
+      <nav>
+    </div> 
+  </div>
+  <div class="header__main-menu">
+    <div class="container">
+      <div class="header__wrap">
+        <div class="header__logo">
+          <a href="#"><img src="../../images/logo.svg"></a>
+        </div>
+        <ul class="main-menu hidden--mobile">
+          <li><a href="#">Product</a></li>
+          <li><a href="#">Solution</a></li>
+          <li><a href="#">Resources</a></li>
+          <li><a href="#">Company</a></li>
+        </ul>
+
+        <div class="header__button">
+          <a href="#" class="btn btn--small btn--radius">Get a demo</a>
+
+          <div class="icon-search"><span>search</span></div>
+        </div>
+
+        <div class="header__hamburger hidden--desktop js-open-menu">
+          <span class="black-line"></span>
+          <span class="black-line"></span>
+          <span class="black-line"></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
