--- a/gulp-pattern-lab/css/components/block-example.css
+++ b/gulp-pattern-lab/css/components/block-example.css
@@ -25,33 +25,33 @@
   width: 100%;
   margin-top: 30px;
   background-color: red; }
-  @media (min-width: 42.66667em) {
+  @media (min-width: 48rem) {
     .block-example__item {
       margin-top: 40px;
-      margin-left: 5.14905%;
-      width: 47.42547%; }
+      margin-left: 4.20168%;
+      width: 47.89916%; }
       .block-example__item:nth-child(2n + 1) {
         margin-left: 0; }
       .block-example__item:nth-child(1), .block-example__item:nth-child(2) {
         margin-top: 0; } }
-  @media (min-width: 56.88889em) {
+  @media (min-width: 64rem) {
     .block-example__item {
-      margin-left: 3.15789%;
-      width: 31.22807%; }
+      margin-left: 3.37838%;
+      width: 31.08108%; }
       .block-example__item:nth-child(2n + 1) {
-        margin-left: 3.15789%; }
+        margin-left: 3.37838%; }
       .block-example__item:nth-child(3n + 1) {
         margin-left: 0; }
       .block-example__item:nth-child(3) {
         margin-top: 0; } }
   .block-example__item:nth-child(1) {
     margin-top: 0; }
-  @media desktopWide {
+  @media (min-width: 80rem) {
     .block-example__item {
-      margin-left: 3.15789%;
-      width: 31.22807%; }
+      margin-left: 2.72374%;
+      width: 31.51751%; }
       .block-example__item:nth-child(2n + 1) {
-        margin-left: 3.15789%; }
+        margin-left: 2.72374%; }
       .block-example__item:nth-child(3n + 1) {
         margin-left: 0; }
       .block-example__item:nth-child(3) {
