--- a/gulp-pattern-lab/scss/imports/_variables.scss
+++ b/gulp-pattern-lab/scss/imports/_variables.scss
@@ -7,17 +7,22 @@ $tablet: 768px;
 $desktop: 1024px;
 $desktop-wide: 1280px;
 $desktop-superwide: 1440px;
+$desktop-superwide-large: 1600px;
 
 // Grid variables
 $container-margin: 10px;
-
+$container-desktop-margin: 66px;
+$container-desktop: 965px;
+$container-desktop-wide: 1176px;
+$container-desktop-superwide: 1387px;
+$container-desktop-superwide-large: 1444px;
 $column-mobile: 4;
 $column-tablet: 8;
 $column-desktop: 12;
 
 //Font variables
-$base-font-size: 18px;
-$base-line-height: 1.6;
+$base-font-size: 16px;
+$base-line-height: 1.5;
 
 // Add global paths
 $image-path: '../images/';
@@ -40,7 +45,7 @@ $susy: (
   container-position: rem($container-margin),
   container: auto,
   columns: $column-mobile,
-  gutters: 15px / 44px,
+  gutters: 5px / 40px,
   column-width: false,
   debug: (
     image: $show-image,
@@ -51,24 +56,25 @@ $susy: (
 );
 
 $susy-tablet: (
-  container-position: rem($container-margin * 4),
+  container-position: rem($container-margin * 2),
   container: auto,
   columns: $column-tablet,
-  gutters: 38px / 59px,
+  gutters: 20px / 42px,
   column-width: false,
   debug: (
     image: $show-image,
-    color: rgba($gray, .25),
+    color: rgba($gray, .25), 
     output: background,
     toggle: top right,
   ),
 );
 
 $susy-desktop: (
-  columns: $column-desktop,
-  gutters: 36px / 62px,
-  container-position: rem($container-margin * 4),
+  container-position: rem($container-desktop-margin),
   container: auto,
+  columns: $column-desktop,
+  gutters: 40px / 62px,
+  column-width: false,
   debug: (
     image: $show-image,
     color: rgba($silver, .25),
@@ -79,9 +85,51 @@ $susy-desktop: (
 
 $susy-desktop-wide: (
   columns: $column-desktop,
-  gutters: 36px / 62px,
-  container-position: rem($container-margin * 4),
+  gutters: 28px / 60px,
+  container-position: center,
+  container: $container-desktop-wide,
+  debug: (
+    image: $show-image,
+    color: rgba($silver, .25),
+    output: background,
+    toggle: top right,
+  ),
+);
+
+$susy-desktop-large: (
+  container-position: rem($container-margin * 3),
   container: auto,
+  columns: $column-desktop,
+  gutters: 40px / 62px,
+  column-width: false,
+  debug: (
+    image: $show-image,
+    color: rgba($silver, .25),
+    output: background,
+    toggle: top right,
+  ),
+);
+
+$susy-desktop-superwide: (
+  columns: $column-desktop,
+  gutters: 28px / 60px,
+  container-position: center,
+  container: $container-desktop-superwide,
+  // container: auto,
+  debug: (
+    image: $show-image,
+    color: rgba($silver, .25),
+    output: background,
+    toggle: top right,
+  ),
+);
+
+$susy-desktop-superwide-large: (
+  columns: $column-desktop,
+  gutters: 28px / 60px,
+  container-position: center,
+  container: $container-desktop-superwide-large,
+  // container: auto,
   debug: (
     image: $show-image,
     color: rgba($silver, .25),
@@ -95,28 +143,37 @@ $susy-media: (
   // max-width: 769px
   mobileOnly: (
     media: screen,
-    max-width: em($tablet - 1) * 1em,
+    max-width: rem($tablet - 1),
   ),
 
   // max-width: 1999px
   mobileTabletOnly: (
     media: screen,
-    max-width: em($desktop - 1) * 1em,
+    max-width: rem($desktop - 1),
   ),
 
   // min-width: 480px
-  mobileLandscape: em($mobile-landscape) * 1em,
+  mobileLandscape: rem($mobile-landscape),
 
   // min-width: 768px and max-width: 1999px
   tabletOnly: (
     media: screen,
-    min-width: em($tablet) * 1em,
-    max-width: em($desktop - 1) * 1em,
+    min-width: rem($tablet),
+    max-width: rem($desktop - 1),
   ),
 
   // min-width: 768px
-  tablet: em($tablet) * 1em,
+  tablet: rem($tablet),
 
-  // min-width: 1999px
-  desktop: em($desktop) * 1em,
+  // min-width: 1024px
+  desktop: rem($desktop),
+
+  // min-width: 1280px
+  desktopWide: rem($desktop-wide),
+
+  // min-width: 1440px
+  desktopSuperwide: rem($desktop-superwide),
+
+  //min-width: 1600px;
+  desktopSuperwidelarge: rem($desktop-superwide-large),
 );
