--- a/gulp-pattern-lab/scss/base/_btn.scss
+++ b/gulp-pattern-lab/scss/base/_btn.scss
@@ -17,7 +17,7 @@
   }
 
   &:focus {
-    outline: rem(1px) solid $dark-gray;
+    outline: rem(1px) solid $link-color;
   }
 
   @include susy-media(tablet) {
