--- a/gulp-pattern-lab/css/styles.css
+++ b/gulp-pattern-lab/css/styles.css
@@ -1,39 +1,17 @@
 @charset "UTF-8";
-.block-banner {
-  padding: 2.5rem 0rem; }
+.block-social {
+  text-align: center; }
   @media (min-width: 64rem) {
-    .block-banner {
-      padding: 3.75rem 0rem; } }
-  .block-banner__wrap {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-align-items: flex-start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -webkit-align-content: center;
-        -ms-flex-line-pack: center;
-            align-content: center; }
-  @media (min-width: 64rem) {
-    .block-banner__left, .block-banner__right {
-      width: 48.31081%;
-      margin-left: 3.37838%; }
-      .block-banner__left:nth-child(2n + 1), .block-banner__right:nth-child(2n + 1) {
+    .block-social {
+      text-align: inherit; } }
+  .block-social a {
+    margin: 0 1.25rem; }
+    @media (min-width: 64rem) {
+      .block-social a {
+        margin-right: 2.1875rem;
         margin-left: 0; }
-      .block-banner__left:nth-child(1), .block-banner__left:nth-child(2), .block-banner__right:nth-child(1), .block-banner__right:nth-child(2) {
-        margin-top: 0; } }
-  .block-banner__title {
-    line-height: 1.35;
-    letter-spacing: .5; }
+        .block-social a:last-child {
+          margin-right: 0; } }
 
 html,
 body,
@@ -299,8 +277,8 @@ embed {
       max-width: 1176px;
       margin-left: auto;
       margin-right: auto;
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(38, 38, 38, 0.25) 68.18182%, transparent 68.18182%);
-      background-size: 8.56031%;
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(38, 38, 38, 0.25) 60%, transparent 60%);
+      background-size: 8.62069%;
       background-origin: content-box;
       background-clip: content-box;
       background-position: left top; }
@@ -322,27 +300,13 @@ embed {
         content: " ";
         display: block;
         clear: both; } }
-  @media (min-width: 90rem) {
-    .container--large {
-      max-width: 1387px;
-      margin-left: auto;
-      margin-right: auto;
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(38, 38, 38, 0.25) 68.18182%, transparent 68.18182%);
-      background-size: 8.56031%;
-      background-origin: content-box;
-      background-clip: content-box;
-      background-position: left top; }
-      .container--large:after {
-        content: " ";
-        display: block;
-        clear: both; } }
   @media (min-width: 100rem) {
     .container--large {
-      max-width: 1444px;
+      max-width: 1440px;
       margin-left: auto;
       margin-right: auto;
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(38, 38, 38, 0.25) 68.18182%, transparent 68.18182%);
-      background-size: 8.56031%;
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(38, 38, 38, 0.25) 60%, transparent 60%);
+      background-size: 8.62069%;
       background-origin: content-box;
       background-clip: content-box;
       background-position: left top; }
@@ -410,7 +374,8 @@ h6 {
 
 h1,
 .h1 {
-  font-size: 3.125rem; }
+  font-size: 1.9375rem;
+  line-height: 1.3; }
   @media (min-width: 48rem) {
     h1,
     .h1 {
@@ -627,7 +592,7 @@ input[type='submit'] {
     color: #fff; }
   .btn:focus, button:focus,
   input[type='submit']:focus {
-    outline: 0.0625rem solid #2d2d2d; }
+    outline: 0.0625rem solid #3681D7; }
   @media (min-width: 48rem) {
     .btn, button,
     input[type='submit'] {
@@ -658,15 +623,15 @@ textarea, select {
   cursor: pointer;
   width: 100%;
   padding: 1.125rem; }
-  input[type="text"]:focus,
-  input[type="number"]:focus,
-  input[type="tel"]:focus,
-  input[type="url"]:focus,
-  input[type="search"]:focus,
-  input[type="email"]:focus,
-  input[type="password"]:focus,
-  input[type="hidden"]:focus, .form-textarea:focus,
-  textarea:focus, select:focus {
+  input[type="text"]:focus-visible,
+  input[type="number"]:focus-visible,
+  input[type="tel"]:focus-visible,
+  input[type="url"]:focus-visible,
+  input[type="search"]:focus-visible,
+  input[type="email"]:focus-visible,
+  input[type="password"]:focus-visible,
+  input[type="hidden"]:focus-visible, .form-textarea:focus-visible,
+  textarea:focus-visible, select:focus-visible {
     outline: 0.0625rem solid #3681D7; }
 
 .form-textarea,
@@ -675,14 +640,14 @@ textarea {
 
 .form-item,
 .form-actions {
-  margin: 0rem 0rem 1.625rem; }
+  margin: 0rem 0rem 0.625rem; }
 
 .form-item.form-type-checkbox, .form-item.form-type-radio {
   margin-bottom: 0.5rem; }
 
 .form-checkbox:focus-visible,
 .form-radio:focus-visible {
-  outline: 0.125rem solid #3681D7; }
+  outline: 0.0625rem solid #3681D7; }
 
 select {
   padding: 0.625rem; }
@@ -710,6 +675,9 @@ th {
 .text--blue {
   color: #3681D7; }
 
+.text--dark-gray {
+  color: #2d2d2d; }
+
 .text--bold {
   font-weight: 700; }
 
@@ -723,10 +691,10 @@ th {
   text-transform: uppercase; }
 
 .font--large {
-  font-size: 1rem; }
+  font-size: 1.1875rem; }
   @media (min-width: 48rem) {
     .font--large {
-      font-size: 1.375rem; } }
+      font-size: 1.5rem; } }
 
 .font--medium {
   font-size: 0.875rem; }
@@ -919,70 +887,52 @@ body {
     .footer {
       padding: 3.75rem 0rem; } }
 
-.footer-top {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start; }
-  .footer-top__item ul li {
-    margin-bottom: 1.25rem;
-    font-size: 0.875rem;
-    margin-top: 0.9375rem; }
-    .footer-top__item ul li:last-child {
-      margin-bottom: 0; }
-  @media (min-width: 64rem) {
-    .footer-top__item {
-      width: 13.85135%;
-      margin-left: 3.37838%; }
-      .footer-top__item:nth-child(6n + 1) {
-        margin-left: 0; }
-      .footer-top__item:nth-child(1), .footer-top__item:nth-child(2), .footer-top__item:nth-child(3), .footer-top__item:nth-child(4), .footer-top__item:nth-child(5), .footer-top__item:nth-child(6) {
-        margin-top: 0; } }
+.footer-top:before, .footer-top:after {
+  content: '';
+  display: table; }
+
+.footer-top:after {
+  clear: both; }
+
+@media (min-width: 64rem) {
+  .footer-top__item {
+    float: left; } }
+
+.footer-top__item li {
+  margin-bottom: 1.25rem;
+  font-size: 0.875rem;
+  margin-top: 0.9375rem; }
+  .footer-top__item li:last-child {
+    margin-bottom: 0; }
+
+@media (min-width: 64rem) {
+  .footer-top__item {
+    width: 13.85135%;
+    margin-right: 3.37838%; }
+    .footer-top__item:nth-child(6n + 6) {
+      float: right;
+      margin-right: 0; } }
 
 .footer-bottom {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin-top: 1.875rem; }
-  @media (min-width: 64rem) {
-    .footer-bottom {
-      margin-top: 3.125rem;
-      -webkit-justify-content: space-between;
-          -ms-flex-pack: justify;
-              justify-content: space-between; } }
-  @media (min-width: 64rem) {
-    .footer-bottom__legal {
-      margin-bottom: 1.875rem; } }
-  .footer-bottom__legal ul li {
-    display: inline;
-    margin-right: 0.625rem; }
-  @media (min-width: 64rem) {
-    .footer-bottom__coppyright {
-      width: 13.85135%;
-      text-align: right; } }
-
-.block-social a {
-  margin: 0 1.25rem; }
-  @media (min-width: 64rem) {
-    .block-social a {
-      margin-right: 2.1875rem;
-      margin-left: 0; }
-      .block-social a:last-child {
-        margin-right: 0; } }
+  .footer-bottom__legal {
+    text-align: center;
+    margin-bottom: 1.875rem; }
+    @media (min-width: 64rem) {
+      .footer-bottom__legal {
+        float: left; }
+        .footer-bottom__legal:before, .footer-bottom__legal:after {
+          content: '';
+          display: table; }
+        .footer-bottom__legal:after {
+          clear: both; } }
+    .footer-bottom__legal li {
+      display: inline;
+      margin-right: 0.625rem; }
+  .footer-bottom__copyright {
+    text-align: center; }
+    @media (min-width: 64rem) {
+      .footer-bottom__copyright {
+        text-align: right; } }
+    .footer-bottom__copyright span {
+      color: #727272; }
