--- a/gulp-pattern-lab/pattern-lab/source/_meta/_00-head.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_meta/_00-head.twig
@@ -15,6 +15,11 @@
     <!-- Css from theme -->
     <link rel="stylesheet" href="../../../../css/styles.css?{{ cacheBuster }}" media="all" />
     <link rel="stylesheet" href="../../../../css/components/block-example.css?{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="../../../../css/components/block-banner.css?{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="../../../../lib/slick/slick.css?{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="../../../../lib/slick/slick-theme.css?{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="../../../../css/lib/over-ride.css?{{ cacheBuster }}" media="all" />    <link rel="stylesheet" href="../../../../css/lib/over-ride.css?{{ cacheBuster }}" media="all" />
+
     <!-- End Css from theme -->
 
     <!-- Base js drupal 8 -->
