--- a/gulp-pattern-lab/scss/base/_typography.scss
+++ b/gulp-pattern-lab/scss/base/_typography.scss
@@ -14,7 +14,8 @@ h6 {
 
 h1,
 .h1 {
-  font-size: rem(50px);
+  font-size: rem(31px);
+  line-height:1.3;
 
   @include susy-media(tablet) {
     font-size: rem(54px)
